Reduced letter spacing in labels to avoid line break

--- a/se-web-ui/src/main/resources/catalog/views/swe/less/gn_editor_swe.less
+++ b/se-web-ui/src/main/resources/catalog/views/swe/less/gn_editor_swe.less
@@ -71,7 +71,6 @@ form.gn-editor {
     font-weight: normal;
     font-size: 12px;
     line-height: 34px;
-    letter-spacing: 1px;
     text-align: left;
     padding-left: 4px;
   }
